--- a/index.html
+++ b/index.html
@@ -192,18 +192,22 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="assets/img/Award1.jpg" class="d-block w-100" alt="...">
+                <p><b>Acadmic Excellence Award, University of Dhaka, Bangladesh</b></p>
               </div>
               <div class="carousel-item">
                 <img src="assets/img/Award2.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
                 <img src="assets/img/travel1.jpg" class="d-block w-100" alt="...">
+                <p><b>Sometimes, staring at the water calms my mind</b></p>
               </div>
               <div class="carousel-item">
                 <img src="assets/img/travel2.jpg" class="d-block w-100" alt="...">
+                <p><b>I love to travel and explore</b></p>
               </div>
               <div class="carousel-item">
                 <img src="assets/img/travel3.jpg" class="d-block w-100" alt="...">
+                <p><b>I obviously love the snowy weather</b></p>
               </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
